[gd_scene load_steps=9 format=3 uid="uid://b5h6i7j8lal0m"]

[ext_resource type="Script" path="res://src/scenes/safe_house/safe_house.gd" id="1_9bq6t"]
[ext_resource type="Script" path="res://src/scenes/safe_house/safe_house_manager.gd" id="2_0cr7u"]
[ext_resource type="PackedScene" uid="uid://bj8k6x3yv2n2k" path="res://src/scenes/safe_house/components/navigation_bar.tscn" id="3_1ds8v"]
[ext_resource type="PackedScene" uid="uid://cve8k4q6nnwrd" path="res://src/scenes/safe_house/rooms/main_room.tscn" id="4_2et9w"]
[ext_resource type="PackedScene" uid="uid://bfb5f7ng7yj0m" path="res://src/scenes/safe_house/rooms/battle_room.tscn" id="5_3fu0x"]
[ext_resource type="PackedScene" uid="uid://cq7f8bx3p4n5r" path="res://src/scenes/safe_house/rooms/recruit_room.tscn" id="6_4gv1y"]
[ext_resource type="PackedScene" uid="uid://dsah5cy4k6m8s" path="res://src/scenes/safe_house/rooms/upgrade_room.tscn" id="7_5hw2z"]
[ext_resource type="PackedScene" uid="uid://xppmb3v12ta2" path="res://src/scenes/safe_house/rooms/research_room.tscn" id="8_6ix30"]
[ext_resource type="PackedScene" uid="uid://byoqnc2w2sub3" path="res://src/scenes/safe_house/rooms/brand_room.tscn" id="9_7jy41"]

[node name="SafeHouse" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_9bq6t")

[node name="SafeHouseManager" type="Node" parent="."]
script = ExtResource("2_0cr7u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NavigationBar" parent="VBoxContainer" instance=ExtResource("3_1ds8v")]
layout_mode = 2
size_flags_vertical = 0

[node name="RoomContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainRoom" parent="VBoxContainer/RoomContainer" instance=ExtResource("4_2et9w")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BattleRoom" parent="VBoxContainer/RoomContainer" instance=ExtResource("5_3fu0x")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RecruitRoom" parent="VBoxContainer/RoomContainer" instance=ExtResource("6_4gv1y")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpgradeRoom" parent="VBoxContainer/RoomContainer" instance=ExtResource("7_5hw2z")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ResearchRoom" parent="VBoxContainer/RoomContainer" instance=ExtResource("8_6ix30")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BrandRoom" parent="VBoxContainer/RoomContainer" instance=ExtResource("9_7jy41")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0 